# wsjcpp

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  VERSION  appveyor.yml  build_simple.sh  build_simple_msvc2015.bat  clean.sh  cppspm.json  docker-build.sh  install.sh  wsjcpp  wsjcpp.json  wsjcpp.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: cmake-multi-platform.yml
ci/travis/: run.sh
contrib/ppa/: README.md  build_source_pkg_for_ppa.py  launchpad_stats.py
contrib/ppa/debian/: control  copyright  rules
docs/: BUILD-AND-INSTALL-MACOS.md  BUILD-AND-INSTALL-UBUNTU.md  PACKAGE_MANAGERS_FOR_CPP.md  README.md
samples/: wsjcpp.with-build-server.yml  wsjcpp.with-docker-section.yml
src/: cppspm_author.cpp  cppspm_author.h  cppspm_dependence.cpp  cppspm_dependence.h  cppspm_download_dependence.cpp  cppspm_download_dependence.h  cppspm_file.cpp  cppspm_file.h  cppspm_manager.cpp  cppspm_manager.h  cppspm_repository.cpp  cppspm_repository.h  cppspm_server.cpp  main.cpp  wsjcpp_author.cpp  wsjcpp_author.h  wsjcpp_dependence.cpp  wsjcpp_dependence.h  wsjcpp_download_dependence.cpp  wsjcpp_file.cpp  wsjcpp_file.h  wsjcpp_helpers.cpp  wsjcpp_helpers.h  wsjcpp_manager.cpp  wsjcpp_manager.h  wsjcpp_package_downloader_base.cpp  wsjcpp_package_downloader_base.h  wsjcpp_package_downloader_bitbucket.cpp  wsjcpp_package_downloader_bitbucket.h  wsjcpp_package_downloader_github.cpp  wsjcpp_package_downloader_github.h  wsjcpp_package_downloader_gitlab.cpp  wsjcpp_package_downloader_gitlab.h  wsjcpp_package_downloader_http.cpp  wsjcpp_package_downloader_http.h  wsjcpp_package_downloader_localfs.cpp  wsjcpp_package_downloader_localfs.h  wsjcpp_package_downloaders.cpp  wsjcpp_package_downloaders.h  wsjcpp_package_manager.cpp  (+15 more)
src-resources.wsjcpp/: __build_simple_sh_path66c8dc.cpp  __build_simple_sh_path66c8dc.h  __build_simple_sh_pathd79e07.cpp  __build_simple_sh_pathd79e07.h  build_simple_sh_path311e3d.cpp  build_simple_sh_path311e3d.h
src.cppspm/: CMakeLists.txt
src.cppspm/fallen/: cppspm.json  fallen.cpp
src.cppspm/fallen_parse_args/: cppspm.json  fallen_parse_args.cpp
src.cppspm/nlohmann_json/: cppspm.json
src.wsjcpp/: CMakeLists.txt
src.wsjcpp/fallen/: cppspm.hold.json
src.wsjcpp/fallen_parse_args/: cppspm.hold.json  fallen_parse_args.h
src.wsjcpp/log/: cppspm.hold.json  fallen.h
src.wsjcpp/sea_kg_nlohmann_json_master/: wsjcpp.hold.json
src.wsjcpp/sea_kg_wsjcpp_parse_args_master/: wsjcpp.hold.json
src.wsjcpp/wsjcpp-arguments/: wsjcpp.hold.yml  wsjcpp_arguments.cpp  wsjcpp_arguments.h
src.wsjcpp/wsjcpp-core/: wsjcpp.hold.yml  wsjcpp_core.cpp  wsjcpp_core.h
src.wsjcpp/wsjcpp-hashes/: wsjcpp.hold.yml
src.wsjcpp/wsjcpp-yaml/: wsjcpp.hold.yml  wsjcpp_yaml.cpp  wsjcpp_yaml.h
src.wsjcpp/wsjcpp_arguments/: generate.WsjcppArgumentProcessor  wsjcpp.hold.yml
src.wsjcpp/wsjcpp_core/: unit_tests.cpp  unit_tests_main.cpp  wsjcpp.hold.yml  wsjcpp_core.cpp  wsjcpp_core.h  wsjcpp_resources_manager.h  wsjcpp_unit_tests.cpp  wsjcpp_unit_tests.h  wsjcpp_unit_tests_main.cpp
src.wsjcpp/wsjcpp_hashes/: md5.cpp  wsjcpp.hold.yml  wsjcpp_hashes.cpp
src.wsjcpp/wsjcpp_safe_scripting/: generate.WSJCppSafeScriptingProc  generate.WsjcppSafeScriptingProc  wsjcpp.hold.yml  wsjcpp_safe_scripting.cpp  wsjcpp_safe_scripting.h
src.wsjcpp/wsjcpp_wsjcpp_arguments/: wsjcpp.hold.yml  wsjcpp_arguments.cpp  wsjcpp_arguments.h
src.wsjcpp/wsjcpp_wsjcpp_core/: wsjcpp.hold.yml  wsjcpp_core.cpp  wsjcpp_core.h
src.wsjcpp/wsjcpp_wsjcpp_hashes/: md5.cpp  md5.h  smallsha1.cpp  wsjcpp.hold.yml  wsjcpp_hashes.cpp  wsjcpp_hashes.h
src.wsjcpp/wsjcpp_wsjcpp_yaml/: wsjcpp.hold.yml  wsjcpp_yaml.cpp  wsjcpp_yaml.h
src.wsjcpp/wsjcpp_yaml/: wsjcpp.hold.yml  wsjcpp_yaml.cpp  wsjcpp_yaml.h
src/ArgumentsProcessors/: argument_processor_authors.cpp  argument_processor_authors.h  argument_processor_basic.cpp  argument_processor_basic.h  argument_processor_change.cpp  argument_processor_change.h  argument_processor_dependencies.cpp  argument_processor_dependencies.h  argument_processor_distribution.cpp  argument_processor_distribution.h  argument_processor_generate.cpp  argument_processor_generate.h  argument_processor_install.cpp  argument_processor_install.h  argument_processor_lint.cpp  argument_processor_lint.h  argument_processor_main.cpp  argument_processor_main.h  argument_processor_origins.cpp  argument_processor_origins.h  argument_processor_prepare.cpp  argument_processor_prepare.h  argument_processor_resources.cpp  argument_processor_resources.h  argument_processor_run.cpp  argument_processor_run.h  argument_processor_scan.cpp  argument_processor_scan.h  argument_processor_sources.cpp  argument_processor_sources.h  argument_processor_templates.cpp  argument_processor_templates.h  argument_processor_unit_tests.cpp  argument_processor_unit_tests.h
src/Downloaders/: wsjcpp_package_downloader_base.cpp  wsjcpp_package_downloader_base.h  wsjcpp_package_downloader_gitlab.cpp  wsjcpp_package_downloader_gitlab.h
src/app/: main.cpp
src/resources.wsjcpp/: __build_simple_sh_path66c8dc.h  build_simple_sh_path311e3d.cpp
tests/: run_package_installation.sh
tests/example-wsjcpp-package-localfs/: wsjcpp.yml
tests/example-wsjcpp-package-localfs/src/: example_wsjcpp_package_localfs.cpp  example_wsjcpp_package_localfs.h
tests/example-wsjcpp-package-localfs/src/subfolder1/subsubfolder2/: example_subfolder.h  example_subsubfolder2.h
unit-tests.wsjcpp/: CMakeLists.txt  CMakeLists.user-custom.txt  build_simple.sh
unit-tests.wsjcpp/data/test-read-package/: wsjcpp.yml
unit-tests.wsjcpp/src/: unit_test_generate_filename_for_unit_test.cpp  unit_test_generate_filename_for_unit_test.h  unit_test_init_package.cpp  unit_test_init_package.h  unit_test_normalize_unit_test_name.cpp  unit_test_normalize_unit_test_name.h  unit_test_read_package.cpp  unit_test_read_package.h  unit_test_test_some.cpp  unit_test_test_some.h
